--- a/resources/views/partials/objects/iso-sm.antlers.html
+++ b/resources/views/partials/objects/iso-sm.antlers.html
@@ -1,4 +1,4 @@
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 968.4 479.6" class="{{ class }}">
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 968.4 479.6" class="{{ class }}">
   <defs>
     <style>
       .iso-cls-10 {
