--- a/resources/views/partials/objects/objects.antlers.html
+++ b/resources/views/partials/objects/objects.antlers.html
@@ -9,34 +9,34 @@
   {{ /partial:layout/span }}
 
   {{ partial:layout/span class="!col-span-full md:!col-span-7 lg:!col-span-6 relative z-20" }}
+    {{ nocache }}
+      {{ apartments:get }}
+        {{ partial:objects/building 
+          :apartments="apartments:building_1" 
+          :title="addresses:building_1"
+          :date="reference_date:building_1"
+          building="01" }}
 
-    {{ apartments:get }}
-      {{ partial:objects/building 
-        :apartments="apartments:building_1" 
-        :title="addresses:building_1"
-        :date="reference_date:building_1"
-        building="01" }}
+        {{ partial:objects/building 
+          :apartments="apartments:building_2" 
+          :title="addresses:building_2"
+          :date="reference_date:building_2"
+          building="02" }}
 
-      {{ partial:objects/building 
-        :apartments="apartments:building_2" 
-        :title="addresses:building_2"
-        :date="reference_date:building_2"
-        building="02" }}
+        {{ partial:objects/building 
+          :apartments="apartments:building_3" 
+          :title="addresses:building_3"
+          :date="reference_date:building_3"
+          building="03" }}
 
-      {{ partial:objects/building 
-        :apartments="apartments:building_3" 
-        :title="addresses:building_3"
-        :date="reference_date:building_3"
-        building="03" }}
-
-      {{ partial:objects/building 
-        :apartments="apartments:building_4" 
-        :title="addresses:building_4"
-        :date="reference_date:building_4"
-        building="04" }}
-        
-    {{ /apartments:get }}
-
+        {{ partial:objects/building 
+          :apartments="apartments:building_4" 
+          :title="addresses:building_4"
+          :date="reference_date:building_4"
+          building="04" }}
+          
+      {{ /apartments:get }}
+    {{ /nocache }}
   {{ /partial:layout/span }}
 
 {{ /partial:layout/grid }}
