--- a/resources/views/partials/objects/filter.antlers.html
+++ b/resources/views/partials/objects/filter.antlers.html
@@ -27,6 +27,7 @@
         <option value="2.5">2.5</option>
         <option value="3.5">3.5</option>
         <option value="4.5">4.5</option>
+        <option value="5.5">5.5</option>
       </select>
     </div>
   {{ /partial:layout/span }}
