--- a/resources/views/partials/layout/footer.antlers.html
+++ b/resources/views/partials/layout/footer.antlers.html
@@ -44,5 +44,12 @@
 </footer>
 {{ vite src="resources/js/app.js" }}
 {{ livewire:scripts }}
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KEWB4RDSW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-3KEWB4RDSW');
+</script>
 </body>
 </html>
